--- a/src/epub/text/part-1.xhtml
+++ b/src/epub/text/part-1.xhtml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>I</title>
+		<title>Part I</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="part-1" epub:type="part">
-			<h2>PART ONE. OBSERVERS AND COMMANDERS</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Part</span>
+					<span epub:type="ordinal z3998:roman">I</span>
+				</h2>
+				<p epub:type="title">Observers and Commanders</p>
+			</hgroup>
 			<h2>I</h2>
 			<p>When Germany threw down her challenge to Russia and France, and England knew that her Imperial power would be one of the prizes of German victory (the common people did not think this, at first, but saw only the outrage to Belgium, a brutal attack on civilization, and a glorious adventure), some newspaper correspondents were sent out from London to report the proceedings, and I was one of them.</p>
 			<p>We went in civilian clothes without military passports—the War Office was not giving any—with bags of money which might be necessary for the hire of motor-cars, hotel life, and the bribery of doorkeepers in the antechambers of war, as some of us had gone to the Balkan War, and others. The Old Guard of war correspondents besieged the War Office for official recognition and were insulted day after day by junior staff-officers who knew that “K” hated these men and thought the press ought to be throttled in time of war; or they were beguiled into false hopes by officials who hoped to go in charge of them and were told to buy horses and sleeping-bags and be ready to start at a moment's notice for the front.</p>
