--- a/src/epub/text/part-2.xhtml
+++ b/src/epub/text/part-2.xhtml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>II</title>
+		<title>Part II</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="part-2" epub:type="part">
-			<h2>PART TWO. THE SCHOOL OF COURAGE</h2>
-			<h3>EARLY DAYS WITH THE NEW ARMY</h3>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Part</span>
+					<span epub:type="ordinal z3998:roman">II</span>
+				</h2>
+				<p epub:type="title">The School of Courage</p>
+				<p epub:type="subtitle">Early Days with the New Army</p>
+			</hgroup>
 			<h2>I</h2>
 			<p>By the time stationary warfare had been established on the western front in trench lines from the sea to Switzerland, the British Regular Army had withered away. That was after the retreat from Mons, the victory of the Marne, the early battles round Ypres, and the slaughter at Neuve Chapelle. The “Old Contemptibles” were an army of ghosts whose dead clay was under earth in many fields of France, but whose spirit still “carried on” as an heroic tradition to those who came after them into those same fields, to the same fate. The only survivors were Regular officers taken out of the fighting-lines to form the staffs of new divisions and to train the army of volunteers now being raised at home, and men who were recovering from wounds or serving behind the lines: those, and non-commissioned officers who were the best schoolmasters of the new boys, the best friends and guides of the new officers, stubborn in their courage, hard and ruthless in their discipline, foul-mouthed according to their own traditions, until they, too, fell in the shambles. It was in March of 1915 that a lieutenant-colonel in the trenches said to me: “I am one out of 150 Regular officers still serving with their battalions. That is to say, there are 150 of us left in the fighting-lines out of 1,500.”</p>
 			<p>That little Regular Army of ours had justified its pride in a long history of fighting courage. It had helped to save England and France by its own death. Those boys of ours whom I had seen in the first August of the war, landing at Boulogne and marching, as though to a festival, toward the enemy, with French girls kissing them and loading them with fruit and flowers, had proved the quality of their spirit and training. As riflemen they had stupefied the enemy, brought to a sudden check by forces they had despised. They held their fire until the German ranks were within eight hundred yards of them, and then mowed them down as though by machine-gun fire—before we had machine-guns, except as rare specimens, here and there. Our horse artillery was beyond any doubt the best in the world at that time. Even before peace came German generals paid ungrudging tributes to the efficiency of our Regular Army, writing down in their histories of war that this was the model of all armies, the most perfectly trained... It was spent by the spring of '15. Its memory remains as the last epic of those professional soldiers who, through centuries of English history, took “the King's shilling” and fought when they were told to fight, and left their bones in far places of the world and in many fields in Europe, and won for the British soldier universal fame as a terrible warrior. There will never be a Regular Army like that. Modern warfare has opened the arena to the multitude. They may no longer sit in the Coliseum watching the paid gladiators. If there be war they must take their share of its sacrifice. They must be victims as well as victors. They must pay for the luxury of conquest, hatred, and revenge by their own bodies, and for their safety against aggression by national service.</p>
