--- a/src/epub/text/part-3.xhtml
+++ b/src/epub/text/part-3.xhtml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>III</title>
+		<title>Part III</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="part-3" epub:type="part">
-			<h2>PART THREE. THE NATURE OF A BATTLE</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Part</span>
+					<span epub:type="ordinal z3998:roman">III</span>
+				</h2>
+				<p epub:type="title">The Nature of a Battle</p>
+				<p epub:type="subtitle">How the New Army Went to Loos</p>
+			</hgroup>
 			<h2>I</h2>
 			<p>In September of 1915 the Commander-in-Chief and his staff were busy with preparations for a battle, in conjunction with the French, which had ambitious objects. These have never been stated because they were not gained (and it was the habit of our High Command to conceal its objectives and minimize their importance if their hopes were unfulfilled), but beyond doubt the purpose of the battle was to gain possession of Lens and its coal-fields, and by striking through Hulluch and Haisnes to menace the German occupation of Lille. On the British front the key of the enemy's position was Hill 70, to the north of Lens, beyond the village of Loos, and the capture of that village and that hill was the first essential of success.</p>
 			<p>The assault on these positions was to be made by two New Army divisions of the 4th Corps: the 47th (London) Division, and the 15th (Scottish) Division. They were to be supported by the 11th Corps, consisting of the Guards and two new and untried divisions, the 21st and the 24th. The Cavalry Corps (less the 3d Cavalry Division under General Fanshawe) was in reserve far back at St.-Pol and Pernes; and the Indian Cavalry Corps under General Remington was at Doullens; “to be in readiness,” wrote Sir John French, “to co-operate with the French cavalry in exploiting any success which might be attained by the French and British forces.”... Oh, wonderful optimism! In that Black Country of France, scattered with mining villages in which every house was a machine-gun fort, with slag heaps and pit-heads which were formidable redoubts, with trenches and barbed wire and brick-stacks, and quarries, organized for defense in siege-warfare, cavalry might as well have ridden through hell with hope of “exploiting” success... “Plans for effective co-operation were fully arranged between the cavalry commanders of both armies,” wrote our Commander-in-Chief in his despatch. I can imagine those gallant old gentlemen devising their plans, with grave courtesy, over large maps, and A. D. C.'s clicking heels in attendance, and an air of immense wisdom and most cheerful assurance governing the proceedings in the salon of a French chateau. .. The 3d Cavalry Division, less one brigade, was assigned to the First Army as a reserve, and moved into the area of the 4th Corps on the 2lst and 22d of September.</p>
