--- a/src/epub/text/part-4.xhtml
+++ b/src/epub/text/part-4.xhtml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>IV</title>
+		<title>Part IV</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="part-4" epub:type="part">
-			<h2>PART FOUR. A WINTER OF DISCONTENT</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Part</span>
+					<span epub:type="ordinal z3998:roman">IV</span>
+				</h2>
+				<p epub:type="title">A Winter of Discontent</p>
+			</hgroup>
 			<h2>I</h2>
 			<p>The winter of 1915 was, I think, the worst of all. There was a settled hopelessness in it which was heavy in the hearts of men—ours and the enemy's. In 1914 there was the first battle of Ypres, when the bodies of British soldiers lay strewn in the fields beyond this city and their brown lines barred the way to Calais, but the war did not seem likely to go on forever. Most men believed, even then, that it would end quickly, and each side had faith in some miracle that might happen. In 1916-17 the winter was foul over the fields of the Somme after battles which had cut all our divisions to pieces and staggered the soul of the world by the immense martyrdom of boys—British, French, and German—on the western front. But the German retreat from the Somme to the shelter of their Hindenburg line gave some respite to our men, and theirs, from the long-drawn fury of attack and counter-attack, and from the intensity of gun-fire. There was at best the mirage of something like victory on our side, a faint flickering up of the old faith that the Germans had weakened and were nearly spent.</p>
 			<p>But for a time in those dark days of 1915 there was no hope ahead. No mental dope by which our fighting-men could drug themselves into seeing a vision of the war's end.</p>
