--- a/src/epub/text/part-5.xhtml
+++ b/src/epub/text/part-5.xhtml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>V</title>
+		<title>Part V</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="part-5" epub:type="part">
-			<h2>PART FIVE. THE HEART OF A CITY</h2>
-			<h3>AMIENS IN TIME OF WAR</h3>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Part</span>
+					<span epub:type="ordinal z3998:roman">V</span>
+				</h2>
+				<p epub:type="title">The Heart of a City</p>
+				<p epub:type="subtitle">Amiens in Time of War</p>
+			</hgroup>
 			<h2>I</h2>
 			<p>During the battles of the Somme in 1916, and afterward in periods of progress and retreat over the abominable fields, the city of Amiens was the capital of the British army. When the battles began in July of that year it was only a short distance away from the fighting-lines; near enough to hear the incessant roar of gun-fire on the French front and ours, and near enough to get, by motor-car or lorry, in less than thirty minutes, to places where men were being killed or maimed or blinded in the routine of the day's work. One went out past Amiens station and across a little stone bridge which afterward, in the enemy's advance of 1918, became the mark for German high velocities along the road to Querrieux, where Rawlinson had his headquarters of the Fourth Army in an old chateau with pleasant meadows round it and a stream meandering through fields of buttercups in summer-time. Beyond the dusty village of Querrieux with its white cottages, from which the plaster fell off in blotches as the war went on, we went along the straight highroad to Albert, through the long and straggling village of Lahoussoye, where Scottish soldiers in reserve lounged about among frowsy peasant women and played solemn games with “the bairns”; and so, past camps and hutments on each side of the road, to the ugly red-brick town where the Golden Virgin hung head downward from the broken tower of the church with her Babe outstretched above the fields of death as though as a peace-offering to this world at war.</p>
 			<p>One could be killed any day in Albert. I saw men blown to bits there the clay after the battles of the Somme began. It was in the road that turned to the right, past the square to go to Meaulte and on to Fricourt. There was a tide of gun transport swirling down the road, bringing up new ammunition for the guns that were firing without a pause over Fricourt and Mametz. The high scream of a shell came through a blue sky and ended on its downward note with a sharp crash. For a few minutes the transport column was held up while a mass of raw flesh which a second before had been two living men and their horses was cleared out of the way. Then the gun wagons went at a harder pace down the road, raising a cloud of white dust out of which I heard the curses of the drivers, swearing in a foul way to disguise their fear.</p>
