--- a/src/epub/text/part-6.xhtml
+++ b/src/epub/text/part-6.xhtml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>VI</title>
+		<title>Part VI</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="part-6" epub:type="part">
-			<h2>PART SIX. PSYCHOLOGY ON THE SOMME</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Part</span>
+					<span epub:type="ordinal z3998:roman">VI</span>
+				</h2>
+				<p epub:type="title">Psychology on the Somme</p>
+			</hgroup>
 			<h2>I</h2>
 			<p>All that had gone before was but a preparation for what now was to come. Until July 1 of 1916 the British armies were only getting ready for the big battles which were being planned for them by something greater than generalship—by the fate which decides the doom of men.</p>
 			<p>The first battles by the Old Contemptibles, down from Mons and up by Ypres, were defensive actions of rear—guards holding the enemy back by a thin wall of living flesh, while behind the New Armies of our race were being raised.</p>
