--- a/src/epub/text/part-8.xhtml
+++ b/src/epub/text/part-8.xhtml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>VIII</title>
+		<title>Part VIII</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="part-8" epub:type="part">
-			<h2>PART EIGHT. FOR WHAT MEN DIED</h2>
+			<hgroup>
+				<h2>
+					<span epub:type="label">Part</span>
+					<span epub:type="ordinal z3998:roman">VIII</span>
+				</h2>
+				<p epub:type="title">For What Men Died</p>
+			</hgroup>
 			<h2>I</h2>
 			<p>In this book I have written in a blunt way some episodes of the war as I observed them, and gained first-hand knowledge of them in their daily traffic. I have not painted the picture blacker than it was, nor selected gruesome morsels and joined them together to make a jig-saw puzzle for ghoulish delight. Unlike Henri Barbusse, who, in his dreadful book Le Feu, gave the unrelieved blackness of this human drama, I have here and in other books shown the light as well as the shade in which our men lived, the gaiety as well as the fear they had, the exultation as well as the agony of battle, the spiritual ardor of boys as well as the brutality of the task that was theirs. I have tried to set down as many aspects of the war's psychology as I could find in my remembrance of these years, without exaggeration or false emphasis, so that out of their confusion, even out of their contradiction, the real truth of the adventure might be seen as it touched the souls of men.</p>
 			<p>Yet when one strives to sum up the evidence and reach definite conclusions about the motives which led men of the warring nations to kill one another year after year in those fields of slaughter, the ideals for which so many millions of men laid down their lives, and the effect of those years of carnage upon the philosophy of this present world of men, there is no clear line of thought or conviction.</p>
