--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,454 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/preface.xhtml">Preface</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">Now It Can Be Told</a>
+					<ol>
+						<li>
+							<a href="text/part-1.xhtml">Part <span epub:type="z3998:roman">I</span>: Observers and Commanders</a>
+							<ol>
+								<li>
+									<a href="text/part-1.xhtml#part-1-1" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-2" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-3" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-4" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-5" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-6" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-7" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-8" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-9" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-10" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-11" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-12" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-13" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-14" epub:type="z3998:roman">XIV</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-15" epub:type="z3998:roman">XV</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-16" epub:type="z3998:roman">XVI</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-17" epub:type="z3998:roman">XVII</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-18" epub:type="z3998:roman">XVIII</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-19" epub:type="z3998:roman">XIX</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-20" epub:type="z3998:roman">XX</a>
+								</li>
+								<li>
+									<a href="text/part-1.xhtml#part-1-21" epub:type="z3998:roman">XXI</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-2.xhtml">Part <span epub:type="z3998:roman">II</span>: The School of Courage</a>
+							<ol>
+								<li>
+									<a href="text/part-2.xhtml#part-2-1" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-2" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-3" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-4" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-5" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-6" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-7" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-8" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-9" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-10" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-11" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-12" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-13" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-14" epub:type="z3998:roman">XIV</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-15" epub:type="z3998:roman">XV</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-16" epub:type="z3998:roman">XVI</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-17" epub:type="z3998:roman">XVII</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-18" epub:type="z3998:roman">XVIII</a>
+								</li>
+								<li>
+									<a href="text/part-2.xhtml#part-2-19" epub:type="z3998:roman">XIX</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-3.xhtml">Part <span epub:type="z3998:roman">III</span>: The Nature of a Battle</a>
+							<ol>
+								<li>
+									<a href="text/part-3.xhtml#part-3-1" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-2" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-3" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-4" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-5" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-6" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-7" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-8" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-9" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-10" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-11" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-12" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-13" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/part-3.xhtml#part-3-14" epub:type="z3998:roman">XIV</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-4.xhtml">Part <span epub:type="z3998:roman">IV</span>: A Winter of Discontent</a>
+							<ol>
+								<li>
+									<a href="text/part-4.xhtml#part-4-1" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-2" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-3" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-4" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-5" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-6" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-7" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-8" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-9" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-10" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-11" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-12" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-13" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-14" epub:type="z3998:roman">XIV</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-15" epub:type="z3998:roman">XV</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-16" epub:type="z3998:roman">XVI</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-17" epub:type="z3998:roman">XVII</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-18" epub:type="z3998:roman">XVIII</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-19" epub:type="z3998:roman">XIX</a>
+								</li>
+								<li>
+									<a href="text/part-4.xhtml#part-4-20" epub:type="z3998:roman">XX</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-5.xhtml">Part <span epub:type="z3998:roman">V</span>: The Heart of a City</a>
+							<ol>
+								<li>
+									<a href="text/part-5.xhtml#part-5-1" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-2" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-3" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-4" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-5" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-6" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-7" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-8" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-9" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-10" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-11" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-12" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-13" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-14" epub:type="z3998:roman">XIV</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-15" epub:type="z3998:roman">XV</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-16" epub:type="z3998:roman">XVI</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-17" epub:type="z3998:roman">XVII</a>
+								</li>
+								<li>
+									<a href="text/part-5.xhtml#part-5-18" epub:type="z3998:roman">XVIII</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-6.xhtml">Part <span epub:type="z3998:roman">VI</span>: Psychology on the Somme</a>
+							<ol>
+								<li>
+									<a href="text/part-6.xhtml#part-6-1" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-2" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-3" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-4" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-5" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-6" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-7" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-8" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-9" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-10" epub:type="z3998:roman">X</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-11" epub:type="z3998:roman">XI</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-12" epub:type="z3998:roman">XII</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-13" epub:type="z3998:roman">XIII</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-14" epub:type="z3998:roman">XIV</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-15" epub:type="z3998:roman">XV</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-16" epub:type="z3998:roman">XVI</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-17" epub:type="z3998:roman">XVII</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-18" epub:type="z3998:roman">XVIII</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-19" epub:type="z3998:roman">XIX</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-20" epub:type="z3998:roman">XX</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-21" epub:type="z3998:roman">XXI</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-22" epub:type="z3998:roman">XXII</a>
+								</li>
+								<li>
+									<a href="text/part-6.xhtml#part-6-23" epub:type="z3998:roman">XXIII</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-7.xhtml">Part <span epub:type="z3998:roman">VII</span>: The Fields of Armageddon</a>
+							<ol>
+								<li>
+									<a href="text/part-7.xhtml#part-7-1" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/part-7.xhtml#part-7-2" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/part-7.xhtml#part-7-3" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/part-7.xhtml#part-7-4" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/part-7.xhtml#part-7-5" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/part-7.xhtml#part-7-6" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/part-7.xhtml#part-7-7" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/part-7.xhtml#part-7-8" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/part-7.xhtml#part-7-9" epub:type="z3998:roman">IX</a>
+								</li>
+								<li>
+									<a href="text/part-7.xhtml#part-7-10" epub:type="z3998:roman">X</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/part-8.xhtml">Part <span epub:type="z3998:roman">VIII</span>: For What Men Died</a>
+							<ol>
+								<li>
+									<a href="text/part-8.xhtml#part-8-1" epub:type="z3998:roman">I</a>
+								</li>
+								<li>
+									<a href="text/part-8.xhtml#part-8-2" epub:type="z3998:roman">II</a>
+								</li>
+								<li>
+									<a href="text/part-8.xhtml#part-8-3" epub:type="z3998:roman">III</a>
+								</li>
+								<li>
+									<a href="text/part-8.xhtml#part-8-4" epub:type="z3998:roman">IV</a>
+								</li>
+								<li>
+									<a href="text/part-8.xhtml#part-8-5" epub:type="z3998:roman">V</a>
+								</li>
+								<li>
+									<a href="text/part-8.xhtml#part-8-6" epub:type="z3998:roman">VI</a>
+								</li>
+								<li>
+									<a href="text/part-8.xhtml#part-8-7" epub:type="z3998:roman">VII</a>
+								</li>
+								<li>
+									<a href="text/part-8.xhtml#part-8-8" epub:type="z3998:roman">VIII</a>
+								</li>
+								<li>
+									<a href="text/part-8.xhtml#part-8-9" epub:type="z3998:roman">IX</a>
+								</li>
+							</ol>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,7 +475,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/part-1.xhtml" epub:type="bodymatter">Now It Can Be Told</a>
 				</li>
 			</ol>
 		</nav>
