--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,22 +12,22 @@
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Now It Can Be Told</i><br/>
-			was published in <time>YEAR</time> by<br/>
+			was published in <time>1920</time> by<br/>
 			<b epub:type="z3998:personal-name">Philip Gibbs</b>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://www.jwgarber.ca/">Jacob Garber</a>,<br/>
 			and is based on a transcription produced in <time>2002</time> by<br/>
 			<b epub:type="z3998:personal-name">Alan Earls</b> and <b epub:type="z3998:personal-name">David Widger</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/3317">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/nowitcanbetold00gibbuoft">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in <time>YEAR</time> by<br/>
-			<a href="COVER_ARTIST_WIKI_URL">COVER_ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">The Doctor</i>,<br/>
+			a painting completed in <time>1916</time> by<br/>
+			<a href="https://en.wikipedia.org/wiki/C._R._W._Nevinson"><abbr epub:type="z3998:given-name">C. R. W.</abbr> Nevinson</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in <time>2014</time> and <time>2009</time> by<br/>
